--- a/index.html
+++ b/index.html
@@ -5,18 +5,214 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids-School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <header>
+<body class="quicksand-normal">
+        <header class="navbar">
+            <div class="logo">
+                <img class="logo-icon" src="assets/logo.png" alt="">
+                <h2 class="logo-text">
+                    School
+                </h2>
+            </div>
+                <nav class="nav-links">
+                    <a id="list-iteam1" href="">Home</a>
+                    <a id="list-iteam2" href="">About</a>
+                    <a id="list-iteam3" href="">Facilities</a>
+                    <a id="list-iteam4" href="">Admission</a>
+                </nav>
+                <a href="#" class="navbar-btn">Contact</a>
+        </header>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h2 class="banner-title">
+                    <span id="banner-title-part1">Empowering</span> <br> students from small <br> age <span id="banner-title-part2">towards vision</span>
+                </h2>
+                <p class="banner-description">
+                    With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.
+                </p>
+                <button class="banner-btn">
+                    Enroll Now
+                </button>
+            </div>
+            <div class="banner-image">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+        </div>
 
     </header>
 
     <main>
+        <section class="standard-curriculum">
+            <h1 class="curriculum-title">
+                Standard Curriculum
+            </h1>
+            <div class="curriculum">
+                <div class="card-curriculum bg-color1">
+                    <img src="assets/kinder.png" alt="">
+                    <h3 class="curriculam-card-title">
+                        Kinder (3-6) Years
+                    </h3>
+                    <p class="curriculam-card-description">
+                        Kinder, or pre-school, for children aged 3–6 years is a stage of education that focuses on building foundational skills for learning.
+                    </p>
+                    <h5 id="card-read-more1">
+                        Read More
+                    </h5>
+                </div>
+                
+                <div class="card-curriculum bg-color2">
+                    <img src="assets/elementary.png" alt="">
+                    <h3 class="curriculam-card-title">
+                        Elementary School
+                    </h3>
+                    <p class="curriculam-card-description">
+                        Elementary schools typically operated grades Kindergarten through 6; the junior high school, often housed in the same building as the senior high school.
+                    </p>
+                    <h5 id="card-read-more2">
+                        Read More
+                    </h5>
+                </div>
 
+                <div class="card-curriculum bg-color3">
+                    <img src="assets/middle.png" alt="">
+                    <h3 class="curriculam-card-title">
+                        Middle (10-16) Years
+                    </h3>
+                    <p class="curriculam-card-description">
+                        he middle years are the years between the ages of 10 and 16, and include middle school and adolescence. During this time, children develop new thinking skills and a sense of identity.
+                    </p>
+                    <h5 id="card-read-more3">
+                        Read More
+                    </h5>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="arrow-circle">
+            <i class="fa-solid fa-less-than arrow-design"></i>
+            <i class="fa-solid fa-greater-than arrow-design"></i>
+        </section>
+
+        <section class="our-stories">
+            <h1 class="our-stories-title">
+                Our Stories
+            </h1>
+
+            <div class="our-stories-container">
+                <div class="our-stories-card">
+                    <img class="our-stories-img" src="assets/story-1.png" alt="">
+                    <br>
+                    <button class="our-stories-btn">
+                        November 19, 2019
+                    </button>
+                    <h3 id="our-stories-title">
+                        A fun toddler coloring training on
+                        classroom
+                    </h3>
+                    <p id="our-stories-description1">
+                        Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform  for open discussion in an inclusive and
+                        collaborative environment, providing the...
+                    </p>
+                </div>
+                <div class="our-stories-container2">
+                    <div class="our-stories-card-content2">
+                        <img class="our-stories-img" src="assets/story-2.png" alt="">
+                        <br>
+                        <button class="stories-btn">
+                            November 19, 2019
+                        </button>
+                        <h3 class="our-stories-description">
+                            Find out if a school fits the
+                            family’s needs
+                        </h3>
+                    </div>
+                    <div class="our-stories-card-content2">
+                        <img class="our-stories-img" src="assets/story-3.png" alt="">
+                        <br>
+                        <button id="stories-button">
+                            November 19, 2019
+                        </button>
+                        <h3 class="our-stories-description">
+                            Summer math & literacy
+                            centres for kids
+                        </h3>
+                    </div>
+                    <div class="our-stories-card-content2">
+                        <img class="our-stories-img" src="assets/story-4.png" alt="">
+                        <br>
+                        <button class="stories-btn">
+                            September 10, 2019
+                        </button>
+                        <h3 class="our-stories-description">
+                            Classroom management
+                            techniques for new tutors
+                        </h3>
+                    </div>
+                    <div class="our-stories-card-content2">
+                        <img class="our-stories-img" src="assets/story-5.png" alt="">
+                        <br>
+                        <button class="stories-btn">
+                            July 19, 2019
+                        </button>
+                        <h3 class="our-stories-description">
+                            Conversation rhymes improve kids listening
+                        </h3>
+                    </div>
+                </div>
+            </div>
+            <div class="stories-bottom-section">
+                <button id="our-stories-last-btn">
+                    View All
+                </button>
+            </div>
+        </section>
     </main>
 
     <footer>
-
+        <div class="footer-section">
+            <div class="footer-education-section">
+                <div class="logo">
+                    <img src="assets/logo2.png" alt="">
+                    <h2>
+                        Kids <br>
+                        Education
+                    </h2>
+                </div>
+                <p>
+                    Review concepts and explore new topics with <br>worksheets, hands-on activities, puzzles, <br> games, and more–the options are endless! Access our <br> library of 37,000+ resources today.
+                </p>
+            </div>
+            <div class="footer-about-section">
+                <h3>
+                    About School
+                </h3>
+                <p>
+                    Home
+                </p>
+                <p>
+                    About
+                </p>
+                <p>
+                    Facilities
+                </p>
+                <p>
+                    Admission
+                </p>
+            </div>
+            <div class="footer-touch-section">
+                <h3>
+                    Keep In Touch
+                </h3>
+                <img src="assets/fb.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/twitter.png" alt="">
+                <img src="assets/google+.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
