make some change for responsive

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
                 </nav>
                 <a href="#" class="navbar-btn">Contact</a>
         </header>
+        <header class="responsive-for-mobile">
+            <div class="responsive-navbar">
+                <img src="assets/logo.png" alt="">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <hr id="hr-line">
+        </header>
 
         <div class="banner">
             <div class="banner-content">
