make some chnages on responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
 
         <div class="banner">
-            <div class="banner-content">
+            <div class="banner-content image1">
                 <h2 class="banner-title">
                     <span id="banner-title-part1">Empowering</span> <br> students from small <br> age <span id="banner-title-part2">towards vision</span>
                 </h2>
@@ -43,7 +43,7 @@
                     Enroll Now
                 </button>
             </div>
-            <div class="banner-image">
+            <div class="banner-image image2">
                 <img src="assets/hero-kids.png" alt="">
             </div>
         </div>
