added a marguee tag

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                         collaborative environment, providing the...
                     </p>
                 </div>
+                
                 <div class="our-stories-container2">
                     <div class="our-stories-card-content2">
                         <img class="our-stories-img" src="assets/story-2.png" alt="">
@@ -170,12 +171,19 @@
                         </h3>
                     </div>
                 </div>
+             
             </div>
             <div class="stories-bottom-section">
                 <button id="our-stories-last-btn">
                     View All
                 </button>
             </div>
+        </section>
+        <section>
+            <marquee behavior="" direction="">
+                Our vision is to be the source for childhood learning on the internet
+                available from anywhere for everyone and without charge.
+            </marquee>
         </section>
     </main>
 
