completed the kids school project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <img src="assets/logo.png" alt="">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            <hr id="hr-line">
         </header>
 
         <div class="banner">
@@ -103,7 +102,10 @@
             <i class="fa-solid fa-greater-than arrow-design"></i>
         </section>
 
-        <section class="our-stories">
+        <section class="our-stories-section">
+            <div class="our-stories">
+
+            
             <h1 class="our-stories-title">
                 Our Stories
             </h1>
@@ -178,8 +180,9 @@
                     View All
                 </button>
             </div>
+        </div>
         </section>
-        <section>
+        <section class="marquee-section">
             <marquee behavior="" direction="">
                 Our vision is to be the source for childhood learning on the internet
                 available from anywhere for everyone and without charge.
