added margin on the responsive footer section

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 </p>
             </div>
             <div class="footer-touch-section">
-                <h3>
+                <h3 id="footer-headline">
                     Keep In Touch
                 </h3>
                 <img src="assets/fb.png" alt="">
