completed kids school assignment

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <div class="logo">
                 <img class="logo-icon" src="assets/logo.png" alt="">
                 <h2 class="logo-text">
-                    School
+                    SCHOOL
                 </h2>
             </div>
                 <nav class="nav-links">
-                    <a id="list-iteam1" href="">Home</a>
-                    <a id="list-iteam2" href="">About</a>
-                    <a id="list-iteam3" href="">Facilities</a>
-                    <a id="list-iteam4" href="">Admission</a>
+                    <a id="list-item1" href="">Home</a>
+                    <a id="list-item2" href="">About</a>
+                    <a id="list-item3" href="">Facilities</a>
+                    <a id="list-item4" href="">Admission</a>
                 </nav>
                 <a href="#" class="navbar-btn">Contact</a>
         </header>
@@ -57,10 +57,10 @@
             <div class="curriculum">
                 <div class="card-curriculum bg-color1">
                     <img src="assets/kinder.png" alt="">
-                    <h3 class="curriculam-card-title">
+                    <h3 class="curriculum-card-title">
                         Kinder (3-6) Years
                     </h3>
-                    <p class="curriculam-card-description">
+                    <p class="curriculum-card-description">
                         Kinder, or pre-school, for children aged 3–6 years is a stage of education that focuses on building foundational skills for learning.
                     </p>
                     <h5 id="card-read-more1">
@@ -70,7 +70,7 @@
                 
                 <div class="card-curriculum bg-color2">
                     <img src="assets/elementary.png" alt="">
-                    <h3 class="curriculam-card-title">
+                    <h3 class="curriculum-card-title">
                         Elementary School
                     </h3>
                     <p class="curriculam-card-description">
@@ -83,7 +83,7 @@
 
                 <div class="card-curriculum bg-color3">
                     <img src="assets/middle.png" alt="">
-                    <h3 class="curriculam-card-title">
+                    <h3 class="curriculum-card-title">
                         Middle (10-16) Years
                     </h3>
                     <p class="curriculam-card-description">
